[FIX] Dark Mode Changes For Account Module

--- a/addons/web_flectra/static/src/scss/backend_theme_customizer/dark_mode.scss
+++ b/addons/web_flectra/static/src/scss/backend_theme_customizer/dark_mode.scss
@@ -12,6 +12,14 @@ body.f_dark_mode {
       background-color: #292929 !important;
     }
 
+    h1,h2,h3,h4,h5,h6{
+        color: #dcdcdc !important;
+    }
+
+    .text-body {
+        color: #babcbd !important;
+    }
+
     html::before, body::before {
       background-image: none !important;
     }
@@ -633,7 +641,7 @@ body.f_dark_mode{
         }
 
         .o_datetime_picker .o_datetime_picker_header .o_header_part{
-            color:#333 !important;
+           // color:#333 !important;
         }
 
         .o-mail-ActivityMarkAsDone{
@@ -730,6 +738,34 @@ body.f_dark_mode{
     .o_error_dialog .modal-header {
            margin-bottom:0rem;
     }
+
+    .o_model_field_selector_popover{
+        .bg-view{
+            background-color:$dark-bg !important;
+        }
+    }
+
+    .modal-body{
+        select > option{
+            background:$dark-bg !important;
+        }
+    }
+
+    .o_list_unselect_all{
+        margin-right: 4px !important;
+        margin-left: 4px !important;
+    }
+
+    select > option{
+        background:$dark-bg !important;
+    }
+
+    .list-group-item.active{
+        .o_list_select_domain{
+            margin-right: 0 !important;
+        }
+    }
+
 
 
 }
